[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface>=0.0.1",
    "huggingface-hub>=1.14.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "clickhouse-driver>=0.2.0",
    "pandas>=1.5.0",
]
